# magtuConsultant

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_create_chat_history.py  002_create_data_tables.py  003_add_duration_to_spec_info.py
app/: main.py
app/core/: config.py  dependencies.py  exceptions.py  logging.py
app/models/: history.py
app/prompts/: router.py  sql.py  subject_matcher.py  system.py
app/prompts/tables/: schemas.json  table_urls.json
app/repositories/: postgres.py  qdrant.py
app/services/agent/: edges.py  graph.py  state.py
app/services/embedding/: client.py
app/services/history/: service.py
app/services/llm/: circuit_breaker.py  client.py
data/postgres/: spec_info.csv  vi_soo_vo.csv
data/qdrant/: documents.json
infra/nginx/: nginx.conf
infra/vllm/: start_embedder.sh  start_llm.sh
scripts/: convert_qdrant.py  ingest_postgres.py  ingest_qdrant.py
tests/load/: locustfile.py
tests/rag_eval/: evaluator.py
tests/rag_eval/data/: questions.xlsx
tests/rag_eval/metrics/: bertscore_metric.py  ragas_metrics.py  ragchecker_metric.py
tests/rag_eval/reports/: eval_20260514_172955.json  eval_20260514_175609.json  eval_20260514_202138.json
tests/rag_eval/results/: bertscore_report.json  bertscore_summary.txt  ragchecker_report.json  ragchecker_summary.txt  raw_answers.json
tests/rag_eval/scripts/: 01_collect_answers.py  02_ragchecker_eval.py  03_ragas_eval.py  05_bertscore_eval.py
(+14 files in other folders)
