[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "magtu-consultant"
version = "1.0.0"
description = "Automated admissions consultant for MAGTU"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langgraph>=0.1.0",
    "qdrant-client>=1.9.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "sqlglot>=23.0.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "tenacity>=8.3.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
eval = [
    "ragas>=0.1.0",
    "bert-score>=0.3.13",
    "ragchecker>=0.1.0",
    "datasets>=2.19.0",
]
load = [
    "locust>=2.28.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]